<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Baby Album Demo</string>
    <string name="hello">hello</string>
    <string name="next_image">next</string>
    <string name="process_image">process</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="origin_image">Origin Image</string>
    <string name="detected_face">Detected baby Faces</string>
	
</resources>
