<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.sysu.bbalbum.util.MainActivity" >

    <LinearLayout
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:orientation=   "vertical" >
		<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dip"
       	android:layout_marginLeft="20dip"
        android:text="@string/origin_image" />
        <ImageView
            android:id="@+id/m_origin_image"
            android:layout_width="180dip"
            android:layout_height="120dip"
            android:contentDescription="@string/hello" 
            android:layout_marginLeft="100dip"/>
		<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dip"
       	android:layout_marginLeft="20dip"
        android:text="@string/detected_face" />
		
        <GridView   
    		android:id="@+id/face_gridview"  
    		android:layout_width="fill_parent"   
    		android:layout_height="fill_parent"  
    		android:numColumns="auto_fit"  
    		android:verticalSpacing="10dp"  
    		android:horizontalSpacing="10dp"  
    		android:columnWidth="90dp"  
    		android:stretchMode="columnWidth"  
    		android:gravity="center" ></GridView>
        
    </LinearLayout>
    
	<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation=   "horizontal" >
      
	<TextView
        android:id = "@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dip"
       	android:layout_marginLeft="100dip"
       		
        android:text="@string/hello_world" />
	
       <Button
       		android:id="@+id/m_next_btn"
       		android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
       		android:layout_marginTop="450dip"
       		android:layout_marginLeft="-60dip"
       		android:text="@string/next_image" />
		
    </LinearLayout>
</RelativeLayout>
